syntax = "proto3";
option go_package = "github.com/achelabov/systat";

import "google/protobuf/empty.proto";


service StatsService {
 //   rpc GetBatteries(google.protobuf.Empty) returns (stream BatteriesResponse) {}
 //   rpc GetCpus(google.protobuf.Empty) returns (stream CpusResponse) {}
    rpc GetStats(google.protobuf.Empty) returns (stream StatsResponse) {}
}

message Battery {
    double batteryLoad = 1;
    string state = 2;
}

message Cpu {
    double cpuLoad = 1;
}

message StatsResponse {
    BatteriesResponse batteries = 1;
    CpusResponse cpus = 2;
}

message BatteriesResponse {
    repeated Battery batteries = 1;
}

message CpusResponse {
    repeated Cpu cpus = 1;
    double averageLoad = 2;
}